<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MGSO4</string>
    <string name="spinner_name">Select one concentration</string>
    <string-array name="IV_concentrations">
        <item>20%</item>
        <item>30%</item>
        <item>50%</item>
        <item>other</item>
    </string-array>
    
    <string-array name="IM_concentrations">
        <item>50%</item>
        <item>60%</item>
        <item>70%</item>
        <item>other</item>
    </string-array>
    
    <string name="BackButtonText">Back</string>
    <string name="NextButtonText">Next</string>
    <string name="IV">IV</string>
    <string name="IM">IM</string>
    <string name="Maintenance">Maintenance</string>
    <string name="IV_solution_note">The IV solution injection should be given slowly for 5 minutes</string>
	<string name="IM_solution_note">The patient may feel warm when the injections are given into the buttocks</string>
	<string name="IM_limitation_note">You should have IM solution available with concentration AT LEAST 50% to prepare an IM solution.</string>
	<string name="IM_limitation_note2">If not available, 1g of 20% IV solution should be given as an injection to the patient.</string>
	<string name="IM_limitation_question">Does the &lt;b>available&lt;/b> IM solution have a concentration &lt;b>greater than or equal to&lt;/b> 50%?</string>
	<string name="warning_not_enought_IM">NOTE: as the available IM percent solution is less than 50%, we will proceed with 1g 20% IV solution.</string>
	<string name="checkConvulsions">WAIT FOR 15 MINUTES TO CHECK IF FITTS ARE RE-OCURRING</string>
	<string name="start_timer">START TIMER</string>
</resources>